--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
-/Assets/AssetStoreTools*
+/Assets/AssetStoreTools/ProCore/*
+/Assets/AssetStoreTools/Demigiant/*
 /Assets/Plugins*
 /Assets/Procore*
 UnityVS.meta
